tests/invalid/min_mismatched_non_numeric/main.py
def run_case() -> None:
    out: int = min(1, "x")


if __name__ == "__main__":
    run_case()
